--- a/scss/wwu2019/general.scss
+++ b/scss/wwu2019/general.scss
@@ -369,7 +369,7 @@ a:not([class]):focus,
 
 .secondary-navigation {
     padding: 0;
-    margin-bottom: -2px;
+    margin-bottom: -0.7px;
     margin-left: 0;
     z-index: 3;
 
